# ouranos-frontend

./: .env  .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  fix.js  package.json  pyproject.toml  static-unavailable.html  svelte.config.js  tsconfig.json  vite.config.js
python/ouranos_frontend/: __init__.py  consts.py  main.py  plugin_setup.py
python_wrapper/: pyproject.toml
python_wrapper/ouranos_frontend/: __init__.py  config.py  main.py  plugin_setup.py
scripts/: install.sh  update.sh
src/: app.html  conf.js
src/lib/: actions.js  actions.svelte.js  cookieStore.js  localStore.js  queries.js  socketio.js  socketio.svelte.js  store.js  store.svelte.js  store.svelte.ts  types.ts
src/lib/components/: BottomBar.svelte  Calendar.svelte  ConfirmButtons.svelte  ContractBanner.svelte  Form.svelte  Gauge.svelte  Graph.svelte  HeaderLine.svelte  Image.svelte  Modal.svelte  SlideButton.svelte  Switch.svelte  Table.svelte  TopBar.svelte  WIPSign.svelte  WeatherIcon.svelte
src/lib/components/layout/: Box.svelte  BoxItem.svelte  Row.svelte
src/lib/components/menu/: Menu.svelte  MenuItem.svelte  functions.js
src/lib/components/screens/: Loading.svelte  (+2 more)
src/lib/utils/: consts.js  factories.js  functions.js  styling.js
src/routes/: +error.svelte  +layout.server.js  +layout.svelte
src/routes/(core)/: +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
src/routes/auth/: +layout.svelte
static/css/: auth.css  global.css
static/fonts/Garamond/: registry.css
static/fonts/Open_Sans/: registry.css
static/fonts/Raleway/: registry.css
(+79 files in other folders)
