[project]
name = "ouranos_frontend"
description = "A frontend plugin for Ouranos"
authors = [
    {name = "Valentin Ambroise"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]

[project.entry-points."ouranos.plugins"]
frontend = "ouranos_frontend.plugin_setup:plugin"

[project.urls]
repository  = "https://github.com/vaamb/ouranos-frontend.git"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ouranos_frontend.__version__"}

[tool.setuptools.packages.find]
where = ["python"]
